# InformaTruth

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  demo.webm  docker-compose.yml  flask_api.py  main.py  render.yml  requirements.txt  run.py  setup.py
.github/workflows/: main.yml
agents/: __init__.py  executor.py  fallback_search.py  input_handler.py  planner.py  router.py
app/: main.py
app/agents/: __init__.py  fallback_search.py  input_handler.py  planner.py  router.py
app/graph/: __init__.py  builder.py  state.py
app/models/: classifier.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  index.html
app/utils/: results.py
backend/: Dockerfile  config.py  pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: db.py  main.py
backend/app/agents/: executor.py
backend/app/models/: __init__.py  classifier.py  db.py  loader.py
backend/app/utils/: __init__.py  logger.py
backend/database/: database.db  test_database.db
backend/fine_tuned_liar_detector/: README.md  adapter_config.json
backend/notebook/: Experiment.ipynb  Experiment_QLoRA.ipynb
backend/tests/: conftest.py  test_agents.py  test_api.py  test_api_extra.py  test_db.py  test_graph.py  test_lifespan.py  test_models.py  test_utils.py
backend/train/: config.py  data_loader.py  predictor.py  run.py  trainer.py  utils.py
fine_tuned_liar_detector/: adapter_model.safetensors  model.safetensors
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  index.css
graph/: __init__.py  builder.py  state.py
models/: __init__.py  classifier.py  loader.py
notebook/: 1 Fine-Tuning.ipynb  2 Fine-Tuning with Multi Agent.ipynb  Experiment.ipynb  experiment.ipynb
src/: config.py  data.py  inference.py  logger.py  main.py  model.py
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html
tests/: conftest.py  test_api.py  test_edge_cases.py  test_executor.py  test_lifespan.py  test_models.py  test_results.py
train/: config.py  data_loader.py  predictor.py  run.py  trainer.py  utils.py
utils/: __init__.py  logger.py  results.py
(+5 files in other folders)
